Assignment1/Part2/ParNumbers.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from ParNumbers.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pExp -> Exp                                 (0)
	%start_pExp1 -> Exp1                               (1)
	%start_pExp2 -> Exp2                               (2)
	Integer -> L_integ                                 (3)
	Exp -> Exp '+' Exp1                                (4)
	Exp -> Exp '-' Exp1                                (5)
	Exp -> Exp '%' Exp1                                (6)
	Exp -> Exp1                                        (7)
	Exp1 -> Exp1 '*' Exp2                              (8)
	Exp1 -> Exp1 '/' Exp2                              (9)
	Exp1 -> Exp1 '^' Exp2                              (10)
	Exp1 -> '-' Exp2                                   (11)
	Exp1 -> '|' Exp1 '|'                               (12)
	Exp1 -> Exp2                                       (13)
	Exp2 -> Integer                                    (14)
	Exp2 -> '(' Exp ')'                                (15)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'%'            { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	')'            { PT _ (TS _ 3) }
	'*'            { PT _ (TS _ 4) }
	'+'            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'/'            { PT _ (TS _ 7) }
	'^'            { PT _ (TS _ 8) }
	'|'            { PT _ (TS _ 9) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pExp     rule  0
	%start_pExp1    rule  1
	%start_pExp2    rule  2
	Integer         rule  3
	Exp             rules 4, 5, 6, 7
	Exp1            rules 8, 9, 10, 11, 12, 13
	Exp2            rules 14, 15

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            shift, and enter state 7
	'-'            shift, and enter state 10
	'|'            shift, and enter state 11
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp            goto state 12
	Exp1           goto state 13
	Exp2           goto state 9

State 1


	'('            shift, and enter state 7
	'-'            shift, and enter state 10
	'|'            shift, and enter state 11
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 8
	Exp2           goto state 9

State 2


	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 6

State 3


	L_integ        shift, and enter state 4


State 4

	Integer -> L_integ .                                (rule 3)

	'%'            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	'^'            reduce using rule 3
	'|'            reduce using rule 3
	%eof           reduce using rule 3


State 5

	Exp2 -> Integer .                                   (rule 14)

	'%'            reduce using rule 14
	')'            reduce using rule 14
	'*'            reduce using rule 14
	'+'            reduce using rule 14
	'-'            reduce using rule 14
	'/'            reduce using rule 14
	'^'            reduce using rule 14
	'|'            reduce using rule 14
	%eof           reduce using rule 14


State 6

	%start_pExp2 -> Exp2 .                              (rule 2)

	%eof           accept


State 7

	Exp2 -> '(' . Exp ')'                               (rule 15)

	'('            shift, and enter state 7
	'-'            shift, and enter state 10
	'|'            shift, and enter state 11
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp            goto state 22
	Exp1           goto state 13
	Exp2           goto state 9

State 8

	%start_pExp1 -> Exp1 .                              (rule 1)
	Exp1 -> Exp1 . '*' Exp2                             (rule 8)
	Exp1 -> Exp1 . '/' Exp2                             (rule 9)
	Exp1 -> Exp1 . '^' Exp2                             (rule 10)

	'*'            shift, and enter state 14
	'/'            shift, and enter state 15
	'^'            shift, and enter state 16
	%eof           accept


State 9

	Exp1 -> Exp2 .                                      (rule 13)

	'%'            reduce using rule 13
	')'            reduce using rule 13
	'*'            reduce using rule 13
	'+'            reduce using rule 13
	'-'            reduce using rule 13
	'/'            reduce using rule 13
	'^'            reduce using rule 13
	'|'            reduce using rule 13
	%eof           reduce using rule 13


State 10

	Exp1 -> '-' . Exp2                                  (rule 11)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 21

State 11

	Exp1 -> '|' . Exp1 '|'                              (rule 12)

	'('            shift, and enter state 7
	'-'            shift, and enter state 10
	'|'            shift, and enter state 11
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 20
	Exp2           goto state 9

State 12

	%start_pExp -> Exp .                                (rule 0)
	Exp -> Exp . '+' Exp1                               (rule 4)
	Exp -> Exp . '-' Exp1                               (rule 5)
	Exp -> Exp . '%' Exp1                               (rule 6)

	'%'            shift, and enter state 17
	'+'            shift, and enter state 18
	'-'            shift, and enter state 19
	%eof           accept


State 13

	Exp -> Exp1 .                                       (rule 7)
	Exp1 -> Exp1 . '*' Exp2                             (rule 8)
	Exp1 -> Exp1 . '/' Exp2                             (rule 9)
	Exp1 -> Exp1 . '^' Exp2                             (rule 10)

	'%'            reduce using rule 7
	')'            reduce using rule 7
	'*'            shift, and enter state 14
	'+'            reduce using rule 7
	'-'            reduce using rule 7
	'/'            shift, and enter state 15
	'^'            shift, and enter state 16
	%eof           reduce using rule 7


State 14

	Exp1 -> Exp1 '*' . Exp2                             (rule 8)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 30

State 15

	Exp1 -> Exp1 '/' . Exp2                             (rule 9)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 29

State 16

	Exp1 -> Exp1 '^' . Exp2                             (rule 10)

	'('            shift, and enter state 7
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp2           goto state 28

State 17

	Exp -> Exp '%' . Exp1                               (rule 6)

	'('            shift, and enter state 7
	'-'            shift, and enter state 10
	'|'            shift, and enter state 11
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 27
	Exp2           goto state 9

State 18

	Exp -> Exp '+' . Exp1                               (rule 4)

	'('            shift, and enter state 7
	'-'            shift, and enter state 10
	'|'            shift, and enter state 11
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 26
	Exp2           goto state 9

State 19

	Exp -> Exp '-' . Exp1                               (rule 5)

	'('            shift, and enter state 7
	'-'            shift, and enter state 10
	'|'            shift, and enter state 11
	L_integ        shift, and enter state 4

	Integer        goto state 5
	Exp1           goto state 25
	Exp2           goto state 9

State 20

	Exp1 -> Exp1 . '*' Exp2                             (rule 8)
	Exp1 -> Exp1 . '/' Exp2                             (rule 9)
	Exp1 -> Exp1 . '^' Exp2                             (rule 10)
	Exp1 -> '|' Exp1 . '|'                              (rule 12)

	'*'            shift, and enter state 14
	'/'            shift, and enter state 15
	'^'            shift, and enter state 16
	'|'            shift, and enter state 24


State 21

	Exp1 -> '-' Exp2 .                                  (rule 11)

	'%'            reduce using rule 11
	')'            reduce using rule 11
	'*'            reduce using rule 11
	'+'            reduce using rule 11
	'-'            reduce using rule 11
	'/'            reduce using rule 11
	'^'            reduce using rule 11
	'|'            reduce using rule 11
	%eof           reduce using rule 11


State 22

	Exp -> Exp . '+' Exp1                               (rule 4)
	Exp -> Exp . '-' Exp1                               (rule 5)
	Exp -> Exp . '%' Exp1                               (rule 6)
	Exp2 -> '(' Exp . ')'                               (rule 15)

	'%'            shift, and enter state 17
	')'            shift, and enter state 23
	'+'            shift, and enter state 18
	'-'            shift, and enter state 19


State 23

	Exp2 -> '(' Exp ')' .                               (rule 15)

	'%'            reduce using rule 15
	')'            reduce using rule 15
	'*'            reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'/'            reduce using rule 15
	'^'            reduce using rule 15
	'|'            reduce using rule 15
	%eof           reduce using rule 15


State 24

	Exp1 -> '|' Exp1 '|' .                              (rule 12)

	'%'            reduce using rule 12
	')'            reduce using rule 12
	'*'            reduce using rule 12
	'+'            reduce using rule 12
	'-'            reduce using rule 12
	'/'            reduce using rule 12
	'^'            reduce using rule 12
	'|'            reduce using rule 12
	%eof           reduce using rule 12


State 25

	Exp -> Exp '-' Exp1 .                               (rule 5)
	Exp1 -> Exp1 . '*' Exp2                             (rule 8)
	Exp1 -> Exp1 . '/' Exp2                             (rule 9)
	Exp1 -> Exp1 . '^' Exp2                             (rule 10)

	'%'            reduce using rule 5
	')'            reduce using rule 5
	'*'            shift, and enter state 14
	'+'            reduce using rule 5
	'-'            reduce using rule 5
	'/'            shift, and enter state 15
	'^'            shift, and enter state 16
	%eof           reduce using rule 5


State 26

	Exp -> Exp '+' Exp1 .                               (rule 4)
	Exp1 -> Exp1 . '*' Exp2                             (rule 8)
	Exp1 -> Exp1 . '/' Exp2                             (rule 9)
	Exp1 -> Exp1 . '^' Exp2                             (rule 10)

	'%'            reduce using rule 4
	')'            reduce using rule 4
	'*'            shift, and enter state 14
	'+'            reduce using rule 4
	'-'            reduce using rule 4
	'/'            shift, and enter state 15
	'^'            shift, and enter state 16
	%eof           reduce using rule 4


State 27

	Exp -> Exp '%' Exp1 .                               (rule 6)
	Exp1 -> Exp1 . '*' Exp2                             (rule 8)
	Exp1 -> Exp1 . '/' Exp2                             (rule 9)
	Exp1 -> Exp1 . '^' Exp2                             (rule 10)

	'%'            reduce using rule 6
	')'            reduce using rule 6
	'*'            shift, and enter state 14
	'+'            reduce using rule 6
	'-'            reduce using rule 6
	'/'            shift, and enter state 15
	'^'            shift, and enter state 16
	%eof           reduce using rule 6


State 28

	Exp1 -> Exp1 '^' Exp2 .                             (rule 10)

	'%'            reduce using rule 10
	')'            reduce using rule 10
	'*'            reduce using rule 10
	'+'            reduce using rule 10
	'-'            reduce using rule 10
	'/'            reduce using rule 10
	'^'            reduce using rule 10
	'|'            reduce using rule 10
	%eof           reduce using rule 10


State 29

	Exp1 -> Exp1 '/' Exp2 .                             (rule 9)

	'%'            reduce using rule 9
	')'            reduce using rule 9
	'*'            reduce using rule 9
	'+'            reduce using rule 9
	'-'            reduce using rule 9
	'/'            reduce using rule 9
	'^'            reduce using rule 9
	'|'            reduce using rule 9
	%eof           reduce using rule 9


State 30

	Exp1 -> Exp1 '*' Exp2 .                             (rule 8)

	'%'            reduce using rule 8
	')'            reduce using rule 8
	'*'            reduce using rule 8
	'+'            reduce using rule 8
	'-'            reduce using rule 8
	'/'            reduce using rule 8
	'^'            reduce using rule 8
	'|'            reduce using rule 8
	%eof           reduce using rule 8


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 16
Number of terminals: 10
Number of non-terminals: 7
Number of states: 31
